const_typed_builder_test/compile_fail/group_at_least_1.stderr
error[E0599]: no method named `build` found for struct `FooBuilder<false, true, false>` in the current scope
  --> ./compile_fail/group_at_least_1.rs:15:55
   |
4  |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
   |                                             ------- method `build` not found for this struct
...
15 |     let foo = Foo::builder().baz("Hello".to_string()).build();
   |                                                       ^^^^^ method not found in `FooBuilder<false, true, false>`
   |
   = note: the method was found for
           - `FooBuilder<true, true, false>`
           - `FooBuilder<true, false, true>`
           - `FooBuilder<false, true, true>`
           - `FooBuilder<true, true, true>`
